--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -278,195 +278,37 @@
         <div class="row justify-content-center">
             <div class="col-lg-8  mb-5 mb-lg-0">
                 <h2 class="h5 section-title">Recent Post</h2>
+                {% for post in allPosts %}
                 <article class="card mb-4">
                     <div class="post-slider">
-                        <img src="{% static 'images/post/post-10.jpg' %}" class="card-img-top" alt="post-thumb">
-                        <img src="{% static 'images/post/post-1.jpg' %}" class="card-img-top" alt="post-thumb">
+                        <img src="{{post.image.url}}" class="card-img-top" alt="post-thumb">
                     </div>
                     <div class="card-body">
-                        <h3 class="mb-3"><a class="post-title" href="post-elements.html">Elements That You Can Use In This Template.</a></h3>
-                        <ul class="card-meta list-inline">
-                            <li class="list-inline-item">
-                                <a href="author-single.html" class="card-meta-author">
-                                    <img src="images/john-doe.jpg' %}" alt="John Doe">
-                                    <span>John Doe</span>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <i class="ti-timer"></i>3 Min To Read
-                            </li>
-                            <li class="list-inline-item">
-                                <i class="ti-calendar"></i>15 jan, 2020
-                            </li>
-                            <li class="list-inline-item">
-                                <ul class="card-meta-tag list-inline">
-                                    <li class="list-inline-item"><a href="tags.html">Demo</a></li>
-                                    <li class="list-inline-item"><a href="tags.html">Elements</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                        <p>Heading example Here is example of hedings. You can use this heading by following markdownify rules. For example: use # for heading 1 and use ###### for heading 6.</p>
-                        <a href="post-elements.html" class="btn btn-outline-primary">Read More</a>
-                    </div>
-                </article>
-
-                <article class="card mb-4">
-                    <div class="post-slider">
-                        <img src="{% static 'images/post/post-3.jpg' %}" class="card-img-top" alt="post-thumb">
-                    </div>
-                    <div class="card-body">
-                        <h3 class="mb-3"><a class="post-title" href="post-details.html">Advice From a Twenty Something</a></h3>
-                        <ul class="card-meta list-inline">
-                            <li class="list-inline-item">
-                                <a href="author-single.html" class="card-meta-author">
-                                    <img src="{% static 'images/john-doe.jpg' %}">
-                                    <span>Mark Dinn</span>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <i class="ti-timer"></i>2 Min To Read
-                            </li>
-                            <li class="list-inline-item">
-                                <i class="ti-calendar"></i>14 jan, 2020
-                            </li>
-                            <li class="list-inline-item">
-                                <ul class="card-meta-tag list-inline">
-                                    <li class="list-inline-item"><a href="tags.html">Decorate</a></li>
-                                    <li class="list-inline-item"><a href="tags.html">Creative</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                        <p>It’s no secret that the digital industry is booming. From exciting startups to global brands, companies are reaching out to digital agencies, responding to the new possibilities available.</p>
-                        <a href="post-details.html" class="btn btn-outline-primary">Read More</a>
-                    </div>
-                </article>
-
-                <article class="card mb-4">
-                    <div class="post-slider">
-                        <img src="{% static 'images/post/post-7.jpg' %}" class="card-img-top" alt="post-thumb">
-                    </div>
-
-                    <div class="card-body">
-                        <h3 class="mb-3"><a class="post-title" href="post-details.html">Advice From a Twenty Something</a></h3>
-                        <ul class="card-meta list-inline">
-                            <li class="list-inline-item">
-                                <a href="author-single.html" class="card-meta-author">
-                                    <img src="{% static 'images/john-doe.jpg' %}">
-                                    <span>Charls Xaviar</span>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <i class="ti-timer"></i>2 Min To Read
-                            </li>
-                            <li class="list-inline-item">
-                                <i class="ti-calendar"></i>14 jan, 2020
-                            </li>
-                            <li class="list-inline-item">
-                                <ul class="card-meta-tag list-inline">
-                                    <li class="list-inline-item"><a href="tags.html">Color</a></li>
-                                    <li class="list-inline-item"><a href="tags.html">Recipe</a></li>
-                                    <li class="list-inline-item"><a href="tags.html">Fish</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                        <p>It’s no secret that the digital industry is booming. From exciting startups to global brands, companies are reaching out to digital agencies, responding to the new possibilities available.</p>
-                        <a href="post-details.html" class="btn btn-outline-primary">Read More</a>
-                    </div>
-                </article>
-
-                <article class="card mb-4">
-                    <div class="card-body">
-                        <h3 class="mb-3"><a class="post-title" href="post-details.html">Cheerful Loving Couple Bakers Drinking Coffee</a></h3>
-                        <ul class="card-meta list-inline">
-                            <li class="list-inline-item">
-                                <a href="author-single.html" class="card-meta-author">
-                                    <img src="{% static 'images/kate-stone.jpg' %}" alt="Kate Stone">
-                                    <span>Kate Stone</span>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <i class="ti-timer"></i>2 Min To Read
-                            </li>
-                            <li class="list-inline-item">
-                                <i class="ti-calendar"></i>14 jan, 2020
-                            </li>
-                            <li class="list-inline-item">
-                                <ul class="card-meta-tag list-inline">
-                                    <li class="list-inline-item"><a href="tags.html">Wow</a></li>
-                                    <li class="list-inline-item"><a href="tags.html">Tasty</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                        <p>It’s no secret that the digital industry is booming. From exciting startups to global brands, companies are reaching out to digital agencies, responding to the new possibilities available.</p>
-                        <a href="post-details.html" class="btn btn-outline-primary">Read More</a>
-                    </div>
-                </article>
-
-                <article class="card mb-4">
-                    <div class="post-slider">
-                        <img src="{% static 'images/post/post-5.jpg' %}" class="card-img-top" alt="post-thumb">
-                    </div>
-                    <div class="card-body">
-                        <h3 class="mb-3"><a class="post-title" href="post-details.html">How To Make Cupcakes and Cashmere Recipe At Home</a></h3>
-                        <ul class="card-meta list-inline">
-                            <li class="list-inline-item">
-                                <a href="author-single.html" class="card-meta-author">
-                                    <img src="{% static 'images/kate-stone.jpg' %}" alt="Kate Stone">
-                                    <span>Kate Stone</span>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <i class="ti-timer"></i>2 Min To Read
-                            </li>
-                            <li class="list-inline-item">
-                                <i class="ti-calendar"></i>14 jan, 2020
-                            </li>
-                            <li class="list-inline-item">
-                                <ul class="card-meta-tag list-inline">
-                                    <li class="list-inline-item"><a href="tags.html">City</a></li>
-                                    <li class="list-inline-item"><a href="tags.html">Food</a></li>
-                                    <li class="list-inline-item"><a href="tags.html">Taste</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                        <p>It’s no secret that the digital industry is booming. From exciting startups to global brands, companies are reaching out to digital agencies, responding to the new possibilities available.</p>
-                        <a href="post-details.html" class="btn btn-outline-primary">Read More</a>
-                    </div>
-                </article>
-
-                <article class="card mb-4">
-                    <div class="post-slider">
-                        <img src="{% static 'images/post/post-8.jpg' %}" class="card-img-top" alt="post-thumb">
-                        <img src="{% static 'images/post/post-9.jpg' %}" class="card-img-top" alt="post-thumb">
-                    </div>
-                    <div class="card-body">
-                        <h3 class="mb-3"><a class="post-title" href="post-details.html">How To Make Cupcakes and Cashmere Recipe At Home</a></h3>
+                        <h3 class="mb-3"><a class="post-title" href="post-elements.html">{{post.title}}</a></h3>
                         <ul class="card-meta list-inline">
                             <li class="list-inline-item">
                                 <a href="author-single.html" class="card-meta-author">
                                     <img src="{% static 'images/john-doe.jpg' %}" alt="John Doe">
-                                    <span>John Doe</span>
+                                    <span>{{post.author.first_name}} {{post.author.last_name}}</span>
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <i class="ti-timer"></i>2 Min To Read
-                            </li>
-                            <li class="list-inline-item">
-                                <i class="ti-calendar"></i>14 jan, 2020
+                                <i class="ti-timer"></i>{{post.published_at |date:"F j, Y" }}
                             </li>
                             <li class="list-inline-item">
                                 <ul class="card-meta-tag list-inline">
-                                    <li class="list-inline-item"><a href="tags.html">Color</a></li>
-                                    <li class="list-inline-item"><a href="tags.html">Recipe</a></li>
-                                    <li class="list-inline-item"><a href="tags.html">Fish</a></li>
+                                    {% for tag in post.tag.all%}
+                                    <li class="list-inline-item"><a href="tags.html">{{tag.name}}</a></li>
+                                    {% endfor %}
                                 </ul>
                             </li>
                         </ul>
-                        <p>It’s no secret that the digital industry is booming. From exciting startups to global brands, companies are reaching out to digital agencies, responding to the new possibilities available.</p>
-                        <a href="post-details.html" class="btn btn-outline-primary">Read More</a>
+                        <p>
+                            {{post.content | truncatechars:50 }}</p>
+                        <a href="post-elements.html" class="btn btn-outline-primary">Read More</a>
                     </div>
                 </article>
-
+                {% endfor %}
                 <ul class="pagination justify-content-center">
                     <li class="page-item page-item active ">
                         <a href="#!" class="page-link">1</a>
@@ -586,49 +428,23 @@
                 </div><!-- recent post -->
                 <div class="widget">
                     <h4 class="widget-title">TOP RATED POSTS</h4>
-
                     <!-- post-item -->
-                    <article class="widget-card">
-                        <div class="d-flex">
-                            <img class="card-img-sm" src="{% static 'images/post/post-10.jpg' %}">
-                            <div class="ml-3">
-                                <h5><a class="post-title" href="post/elements/">Elements That You Can Use In This Template.</a></h5>
-                                <ul class="card-meta list-inline mb-0">
-                                    <li class="list-inline-item mb-0">
-                                        <i class="ti-calendar"></i>15 jan, 2020
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </article>
 
+                    {% for topRatedPost in topRatedPosts %}
                     <article class="widget-card">
                         <div class="d-flex">
-                            <img class="card-img-sm" src="{% static 'images/post/post-3.jpg' %}">
+                            <img class="card-img-sm" src="{{topRatedPost.image.url}}">
                             <div class="ml-3">
-                                <h5><a class="post-title" href="post-details.html">Advice From a Twenty Something</a></h5>
+                                <h5><a class="post-title" href="post/elements/">{{topRatedPost.title}}</a></h5>
                                 <ul class="card-meta list-inline mb-0">
                                     <li class="list-inline-item mb-0">
-                                        <i class="ti-calendar"></i>14 jan, 2020
+                                        <i class="ti-calendar"></i>{{topRatedPost.published_at | date:"F j, Y" }}
                                     </li>
                                 </ul>
                             </div>
                         </div>
                     </article>
-
-                    <article class="widget-card">
-                        <div class="d-flex">
-                            <img class="card-img-sm" src="{% static 'images/post/post-7.jpg' %}">
-                            <div class="ml-3">
-                                <h5><a class="post-title" href="post-details.html">Advice From a Twenty Something</a></h5>
-                                <ul class="card-meta list-inline mb-0">
-                                    <li class="list-inline-item mb-0">
-                                        <i class="ti-calendar"></i>14 jan, 2020
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </article>
+                    {% endfor %}
                 </div>
 
                 <!-- Social -->
