--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -183,7 +183,9 @@
                 {% if editorPickPost %}
                 <article class="card">
                     <div class="post-slider slider-sm">
-                        <img src="{{editorPickPost.image.url}}" class="card-img-top" alt="post-thumb">
+                        {% for postMedia in editorPickPost.postmedia_set.all %}
+                        <img src="{{postMedia.file.url}}" class="card-img-top" alt="post-thumb">
+                        {% endfor %}
                     </div>
 
                     <div class="card-body">
@@ -219,7 +221,7 @@
                 {% for trendingPost in trendingPosts %}
                 <article class="card mb-4">
                     <div class="card-body d-flex">
-                        <img class="card-img-sm" src="{{trendingPost.image.url}}">
+                        <img class="card-img-sm" src="{{trendingPost.feature_image.file.url}}">
                         <div class="ml-3">
                             <h4><a href="post-details.html" class="post-title">{{trendingPost.title}}</a></h4>
                             <ul class="card-meta list-inline mb-0">
@@ -235,13 +237,14 @@
                 </article>
                 {% endfor %}
             </div>
-
             <div class="col-lg-4 mb-5">
                 <h2 class="h5 section-title">Popular Post</h2>
                 {% if popularPost %}
                 <article class="card">
                     <div class="post-slider slider-sm">
-                        <img src="{{ popularPost.image.url }}" class="card-img-top" alt="post-thumb">
+                        {% for postMedia in popularPost.postmedia_set.all %}
+                        <img src="{{postMedia.file.url}}" class="card-img-top" alt="post-thumb">
+                        {% endfor %}
                     </div>
                     <div class="card-body">
                         <h3 class="h4 mb-3"><a class="post-title" href="post-details.html">{{popularPost.title}}</a></h3>
@@ -458,7 +461,7 @@
                     {% for topRatedPost in topRatedPosts %}
                     <article class="widget-card">
                         <div class="d-flex">
-                            <img class="card-img-sm" src="{{topRatedPost.image.url}}">
+                            <img class="card-img-sm" src="{{topRatedPost.feature_image.file.url}}">
                             <div class="ml-3">
                                 <h5><a class="post-title" href="post/elements/">{{topRatedPost.title}}</a></h5>
                                 <ul class="card-meta list-inline mb-0">
