--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,117 +1,7 @@
 {% extends "layout.html" %}
 {% load static %}
 {% block content %}
-<!-- navigation -->
-<header class="navigation fixed-top">
-    <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-white">
-            <a class="navbar-brand order-1" href="index.html">
-                <img class="img-fluid" width="100px" src="{% static 'images/logo.png' %}"
-                     alt="Reader | Hugo Personal Blog Template">
-            </a>
-            <div class="collapse navbar-collapse text-center order-lg-2 order-3" id="navigation">
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
-                           aria-expanded="false">
-                            homepage <i class="ti-angle-down ml-1"></i>
-                        </a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="index-full.html">Homepage Full Width</a>
 
-                            <a class="dropdown-item" href="index-full-left.html">Homepage Full With Left Sidebar</a>
-
-                            <a class="dropdown-item" href="index-full-right.html">Homepage Full With Right Sidebar</a>
-
-                            <a class="dropdown-item" href="index-list.html">Homepage List Style</a>
-
-                            <a class="dropdown-item" href="index-list-left.html">Homepage List With Left Sidebar</a>
-
-                            <a class="dropdown-item" href="index-list-right.html">Homepage List With Right Sidebar</a>
-
-                            <a class="dropdown-item" href="index-grid.html">Homepage Grid Style</a>
-
-                            <a class="dropdown-item" href="index-grid-left.html">Homepage Grid With Left Sidebar</a>
-
-                            <a class="dropdown-item" href="index-grid-right.html">Homepage Grid With Right Sidebar</a>
-
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
-                           aria-expanded="false">
-                            About <i class="ti-angle-down ml-1"></i>
-                        </a>
-                        <div class="dropdown-menu">
-
-                            <a class="dropdown-item" href="about-me.html">About Me</a>
-
-                            <a class="dropdown-item" href="about-us.html">About Us</a>
-
-                        </div>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-
-                    <li class="nav-item dropdown">
-                        <a class="nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
-                           aria-expanded="false">Pages <i class="ti-angle-down ml-1"></i>
-                        </a>
-                        <div class="dropdown-menu">
-
-                            <a class="dropdown-item" href="author.html">Author</a>
-
-                            <a class="dropdown-item" href="author-single.html">Author Single</a>
-
-                            <a class="dropdown-item" href="advertise.html">Advertise</a>
-
-                            <a class="dropdown-item" href="post-details.html">Post Details</a>
-
-                            <a class="dropdown-item" href="post-elements.html">Post Elements</a>
-
-                            <a class="dropdown-item" href="tags.html">Tags</a>
-
-                            <a class="dropdown-item" href="search-result.html">Search Result</a>
-
-                            <a class="dropdown-item" href="search-not-found.html">Search Not Found</a>
-
-                            <a class="dropdown-item" href="privacy-policy.html">Privacy Policy</a>
-
-                            <a class="dropdown-item" href="terms-conditions.html">Terms Conditions</a>
-
-                            <a class="dropdown-item" href="404.html">404 Page</a>
-
-                        </div>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="shop.html">Shop</a>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="order-2 order-lg-3 d-flex align-items-center">
-                <select class="m-2 border-0 bg-transparent" id="select-language">
-                    <option id="en" value="" selected>En</option>
-                    <option id="fr" value="">Fr</option>
-                </select>
-
-                <!-- search -->
-                <form class="search-bar">
-                    <input id="search-query" name="s" type="search" placeholder="Type &amp; Hit Enter...">
-                </form>
-
-                <button class="navbar-toggler border-0 order-1" type="button" data-toggle="collapse" data-target="#navigation">
-                    <i class="ti-menu"></i>
-                </button>
-            </div>
-
-        </nav>
-    </div>
-</header>
-<!-- /navigation -->
 <!-- start of banner -->
 <div class="banner text-center">
     <div class="container">
@@ -350,200 +240,9 @@
                     {% endif %}
                 </ul>
             </div>
-            <aside class="col-lg-4 sidebar-home">
-                <!-- Search -->
-                <div class="widget">
-                    <h4 class="widget-title"><span>Search</span></h4>
-                    <form action="#!" class="widget-search">
-                        <input class="mb-3" id="search-query" name="s" type="search" placeholder="Type &amp; Hit Enter...">
-                        <i class="ti-search"></i>
-                        <button type="submit" class="btn btn-primary btn-block">Search</button>
-                    </form>
-                </div>
-
-                <!-- about me -->
-                <div class="widget widget-about">
-                    <h4 class="widget-title">Hi, I am Alex!</h4>
-                    <img class="img-fluid" src="{% static 'images/author.jpg' %}" alt="Themefisher">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vel in in donec iaculis tempus odio nunc laoreet . Libero ullamcorper.</p>
-                    <ul class="list-inline social-icons mb-3">
-
-                        <li class="list-inline-item"><a href="#"><i class="ti-facebook"></i></a></li>
-
-                        <li class="list-inline-item"><a href="#"><i class="ti-twitter-alt"></i></a></li>
-
-                        <li class="list-inline-item"><a href="#"><i class="ti-linkedin"></i></a></li>
-
-                        <li class="list-inline-item"><a href="#"><i class="ti-github"></i></a></li>
-
-                        <li class="list-inline-item"><a href="#"><i class="ti-youtube"></i></a></li>
-
-                    </ul>
-                    <a href="about-me.html" class="btn btn-primary mb-2">About me</a>
-                </div>
-                <!-- Adds will also go here -->
-                <!-- Promotion -->
-                <div class="promotion">
-                    <img src="{% static 'images/promotion.jpg' %}" class="img-fluid w-100">
-                    <div class="promotion-content">
-                        <h5 class="text-white mb-3">Discover, Explore, Engage!!</h5>
-                        <p class="text-white mb-4">Whether you're a passionate reader seeking fresh insights or a content creator looking to reach a wider audience, this is your go-to destination for automated curated content. Start exploring today and unlock a world of possibilities!.</p>
-                        <a href="https://themefisher.com/" class="btn btn-primary">Register</a>
-                    </div>
-                </div>
-                <!-- authors -->
-                <div class="widget widget-author">
-                    <h4 class="widget-title">Authors</h4>
-                    <div class="media align-items-center">
-                        <div class="mr-3">
-                            <img class="widget-author-image" src="{% static 'images/john-doe.jpg' %}">
-                        </div>
-                        <div class="media-body">
-                            <h5 class="mb-1"><a class="post-title" href="author-single.html">Charls Xaviar</a></h5>
-                            <span>Author &amp; developer of Bexer, Biztrox theme</span>
-                        </div>
-                    </div>
-                    <div class="media align-items-center">
-                        <div class="mr-3">
-                            <img class="widget-author-image" src="{% static 'images/kate-stone.jpg' %}">
-                        </div>
-                        <div class="media-body">
-                            <h5 class="mb-1"><a class="post-title" href="author-single.html">Kate Stone</a></h5>
-                            <span>Author &amp; developer of Bexer, Biztrox theme</span>
-                        </div>
-                    </div>
-                    <div class="media align-items-center">
-                        <div class="mr-3">
-                            <img class="widget-author-image" src="{% static 'images/john-doe.jpg' %}" alt="John Doe">
-                        </div>
-                        <div class="media-body">
-                            <h5 class="mb-1"><a class="post-title" href="author-single.html">John Doe</a></h5>
-                            <span>Author &amp; developer of Bexer, Biztrox theme</span>
-                        </div>
-                    </div>
-                </div>
-                <!-- Search -->
-
-                <div class="widget">
-                    <h4 class="widget-title"><span>Never Miss A News</span></h4>
-                    <form action="#!" method="post" name="mc-embedded-subscribe-form" target="_blank"
-                          class="widget-search">
-                        <input class="mb-3" id="search-query" name="s" type="search" placeholder="Your Email Address">
-                        <i class="ti-email"></i>
-                        <button type="submit" class="btn btn-primary btn-block" name="subscribe">Subscribe now</button>
-                        <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                            <input type="text" name="b_463ee871f45d2d93748e77cad_a0a2c6d074" tabindex="-1">
-                        </div>
-                    </form>
-                </div>
-
-                <!-- categories -->
-                <div class="widget widget-categories">
-                    <h4 class="widget-title"><span>Categories</span></h4>
-                    <ul class="list-unstyled widget-list">
-                        {% for category in categories%}
-                        <li><a href="tags.html" class="d-flex">{{category.name}} <small class="ml-auto">({{category.post_set.all | length}})</small></a></li>
-                        {% endfor %}
-                    </ul>
-                </div><!-- tags -->
-                <div class="widget">
-                    <h4 class="widget-title"><span>Tags</span></h4>
-                    <ul class="list-inline widget-list-inline widget-card">
-                        {% for tag in tags%}
-                        <li class="list-inline-item"><a href="tags.html">{{tag.name}}</a></li>
-                        {% endfor %}
-                    </ul>
-                </div><!-- recent post -->
-                <div class="widget">
-                    <h4 class="widget-title">TOP RATED POSTS</h4>
-                    <!-- post-item -->
-
-                    {% for topRatedPost in topRatedPosts %}
-                    <article class="widget-card">
-                        <div class="d-flex">
-                            <img class="card-img-sm" src="{{topRatedPost.feature_image.file.url}}">
-                            <div class="ml-3">
-                                <h5><a class="post-title" href="post/elements/">{{topRatedPost.title}}</a></h5>
-                                <ul class="card-meta list-inline mb-0">
-                                    <li class="list-inline-item mb-0">
-                                        <i class="ti-calendar"></i>{{topRatedPost.published_at | date:"F j, Y" }}
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </article>
-                    {% endfor %}
-                </div>
-
-                <!-- Social -->
-                <div class="widget">
-                    <h4 class="widget-title"><span>Social Links</span></h4>
-                    <ul class="list-inline widget-social">
-                        <li class="list-inline-item"><a href="#"><i class="ti-facebook"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="ti-linkedin"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="ti-github"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="ti-youtube"></i></a></li>
-                    </ul>
-                </div>
-            </aside>
+            {% include 'sidebar.html' %}
         </div>
     </div>
 </section>
 
-<footer class="footer">
-    <svg class="footer-border" height="214" viewBox="0 0 2204 214" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M2203 213C2136.58 157.994 1942.77 -33.1996 1633.1 53.0486C1414.13 114.038 1200.92 188.208 967.765 118.127C820.12 73.7483 263.977 -143.754 0.999958 158.899"
-              stroke-width="2" />
-    </svg>
-
-    <div class="instafeed text-center mb-5">
-        <h2 class="h3 mb-4">INSTAGRAM POST</h2>
-
-        <div class="instagram-slider">
-            <div class="instagram-post"><img src="{% static 'images/instagram/1.jpg' %}"></div>
-            <div class="instagram-post"><img src="{% static 'images/instagram/2.jpg' %}"></div>
-            <div class="instagram-post"><img src="{% static 'images/instagram/4.jpg' %}"></div>
-            <div class="instagram-post"><img src="{% static 'images/instagram/3.jpg' %}"></div>
-            <div class="instagram-post"><img src="{% static 'images/instagram/2.jpg' %}"></div>
-            <div class="instagram-post"><img src="{% static 'images/instagram/1.jpg' %}"></div>
-            <div class="instagram-post"><img src="{% static 'images/instagram/3.jpg' %}"></div>
-            <div class="instagram-post"><img src="{% static 'images/instagram/4.jpg' %}"></div>
-            <div class="instagram-post"><img src="{% static 'images/instagram/2.jpg' %}"></div>
-            <div class="instagram-post"><img src="{% static 'images/instagram/4.jpg' %}"></div>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-md-5 text-center text-md-left mb-4">
-                <ul class="list-inline footer-list mb-0">
-                    <li class="list-inline-item"><a href="privacy-policy.html">Privacy Policy</a></li>
-                    <li class="list-inline-item"><a href="terms-conditions.html">Terms Conditions</a></li>
-                </ul>
-            </div>
-            <div class="col-md-2 text-center mb-4">
-                <a href="index.html"><img class="img-fluid" width="100px" src="{% static 'images/logo.png' %}" alt="Reader | Hugo Personal Blog Template"></a>
-            </div>
-            <div class="col-md-5 text-md-right text-center mb-4">
-                <ul class="list-inline footer-list mb-0">
-
-                    <li class="list-inline-item"><a href="#"><i class="ti-facebook"></i></a></li>
-
-                    <li class="list-inline-item"><a href="#"><i class="ti-twitter-alt"></i></a></li>
-
-                    <li class="list-inline-item"><a href="#"><i class="ti-linkedin"></i></a></li>
-
-                    <li class="list-inline-item"><a href="#"><i class="ti-github"></i></a></li>
-
-                    <li class="list-inline-item"><a href="#"><i class="ti-youtube"></i></a></li>
-
-                </ul>
-            </div>
-            <div class="col-12">
-                <div class="border-bottom border-default"></div>
-            </div>
-        </div>
-    </div>
-</footer>
 {% endblock %}
