reviews in process

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,8 +26,8 @@
   <link rel="stylesheet" href="{%static 'css/skeleton.css ' %}" media="screen">
 
   <!--Favicon-->
-  <link rel="shortcut icon" href="{%static 'images/favicon.png' %} ' %}" type="image/x-icon">
-  <link rel="icon" href="{%static 'images/favicon.png' %} ' %}" type="image/x-icon">
+  <link rel="shortcut icon" href="{%static 'images/favicon.png' %} " type="image/x-icon">
+  <link rel="icon" href="{%static 'images/favicon.png' %}" type="image/x-icon">
 
   <meta property="og:title" content="Reader | Hugo Personal Blog Template" />
   <meta property="og:description" content="This is meta description" />
