--- a/templates/post-detail.html
+++ b/templates/post-detail.html
@@ -17,9 +17,12 @@
                     <h1 class="h2">{{post.title}}</h1>
                     <ul class="card-meta my-3 list-inline">
                         <li class="list-inline-item">
+                            <i class="fa fa-clock"></i>jlkjlk
+                        </li>
+                        <li class="list-inline-item">
                             <a href="author-single.html" class="card-meta-author">
-                                <img src="images/john-doe.jpg">
-                                <span>{{post.author.first_name}} {{post.author.last_name}}r</span>
+                                <img src="{{post.author.account.picture.url}}">
+                                <span>{{post.author.first_name}} {{post.author.last_name}}</span>
                             </a>
                         </li>
                         <li class="list-inline-item">
@@ -43,34 +46,20 @@
             <div class="col-lg-9 col-md-12">
                 <div class="mb-5 border-top mt-4 pt-5">
                     <h3 class="mb-4">Comments</h3>
-
+                    {% for review in post.review_set.all %}
                     <div class="media d-block d-sm-flex mb-4 pb-4">
                         <a class="d-inline-block mr-2 mb-3 mb-md-0" href="#">
                             <img src="images/post/user-01.jpg" class="mr-3 rounded-circle" alt="">
                         </a>
                         <div class="media-body">
-                            <a href="#!" class="h4 d-inline-block mb-3">Alexender Grahambel</a>
+                            <a href="#!" class="h4 d-inline-block mb-3">{{review.name}}</a>
 
-                            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+                            <p>{{review.content}}</p>
 
-                            <span class="text-black-800 mr-3 font-weight-600">April 18, 2020 at 6.25 pm</span>
-                            <a class="text-primary font-weight-600" href="#!">Reply</a>
+                            <span class="text-black-800 mr-3 font-weight-600">{{review.created_at|date:"F j, Y" }}</span>
                         </div>
                     </div>
-                    <div class="media d-block d-sm-flex">
-                        <div class="d-inline-block mr-2 mb-3 mb-md-0" href="#">
-                            <img class="mr-3" src="images/post/arrow.png" alt="">
-                            <a href="#!"><img src="images/post/user-02.jpg" class="mr-3 rounded-circle" alt=""></a>
-                        </div>
-                        <div class="media-body">
-                            <a href="#!" class="h4 d-inline-block mb-3">Nadia Sultana Tisa</a>
-
-                            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-
-                            <span class="text-black-800 mr-3 font-weight-600">April 18, 2020 at 6.25 pm</span>
-                            <a class="text-primary font-weight-600" href="#!">Reply</a>
-                        </div>
-                    </div>
+                    {% endfor %}
                 </div>
 
                 <div>
@@ -85,10 +74,6 @@
                             </div>
                             <div class="form-group col-md-4">
                                 <input class="form-control shadow-none" type="email" placeholder="Email" required>
-                            </div>
-                            <div class="form-group col-md-4">
-                                <input class="form-control shadow-none" type="url" placeholder="Website">
-                                <p class="font-weight-bold valid-feedback">OK! You can skip this field.</p>
                             </div>
                         </div>
                         <button class="btn btn-primary" type="submit">Comment Now</button>
